@@ -52,8 +52,6 @@
     </description>
     <packaging>pom</packaging>
     <modules>
-        <module>jersey-gf-bundle</module>
-        <module>jackson</module>
         <module>jersey-gf-statsproviders</module>
     </modules>
 </project>
