@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<probe-providers>
+<probe-provider moduleProviderName="glassfish" moduleName="jersey" probeProviderName="server-hidden" class="com.sun.jersey.server.probes.UriRuleProbeProvider">
+   <probe name="ruleAccept" hidden="true">
+      <method>ruleAccept</method>
+      <probe-param type="java.lang.String" name="ruleName" />
+      <probe-param type="java.lang.CharSequence" name="path"/>
+      <probe-param type="java.lang.Object" name="resource"/>
+      <return-param type="void" />
+   </probe>
+   <probe name="requestStart" hidden="true">
+      <method>requestStart</method>
+      <probe-param type="java.net.URI" name="requestUri" />
+      <return-param type="void" />
+   </probe>
+   <probe name="requestEnd" hidden="true">
+      <method>requestEnd</method>
+      <return-param type="void" />
+   </probe>
+</probe-provider>
+</probe-providers>
