@@ -1,4 +1,8 @@
 release 1.3 (06-2010)
+- GlassFish v3 integration
+  Instead of one big uber JAR, jersey-gf-bundle.jar, individual Jersey modules 
+  are integrated to GlassFish to allow better modularization
+  and alignment with non GlassFish environment
 - Fixed issue 436
   https://jersey.dev.java.net/issues/show_bug.cgi?id=436
   Resources may be looked up using a URI via methods on 
